unpackaged/main/default/objects/Additional_TID__c/Additional_TID__c.object-meta.xml
<CustomObject>
    <label>Additional TID</label>
    <nameField>
        <displayFormat>ATD-{000000}</displayFormat>
        <label>Additional TID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional TIDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>