unpackaged/main/default/objects/Additional_TID__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MID</label>
    <referenceTo>MID__c</referenceTo>
    <relationshipLabel>Additional TIDs</relationshipLabel>
    <relationshipName>Additional_TIDs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>