unpackaged/main/default/objects/Additional_TID__c/fields/Terminal_ID_TID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID_TID__c</fullName>
    <label>Terminal ID (TID)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>