unpackaged/main/default/objects/Additional_TID__c/fields/TID_Type__c.field-meta.xml
<CustomField>
    <fullName>TID_Type__c</fullName>
    <label>TID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alipay</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Union Pay</fullName>
            </value>
            <value>
                <fullName>WeChat Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>